se hizo ... y se completó america del centro

--- a/src/europa.html
+++ b/src/europa.html
@@ -72,6 +72,14 @@
               >
             </li>
             <li class="nav-item">
+              <a
+                class="nav-link active text-light"
+                aria-current="page"
+                href="/src/nosotros.html"
+                >Nosotros</a
+              >
+          </li>
+            <li class="nav-item">
               <a class="nav-link text-light" href="src/blog.html">Blog</a>
             </li>
             <li class="nav-item dropdown">
@@ -116,7 +124,7 @@
             <input
               class="form-control me-2"
               type="search"
-              placeholder="Buscar por país"
+              placeholder="Buscar..."
               aria-label="Search"
             />
             <button class="btn btn-outline-success text-light" type="submit">
