--- a/src/America_Norte.html
+++ b/src/America_Norte.html
@@ -71,6 +71,14 @@
               >
             </li>
             <li class="nav-item">
+              <a
+                class="nav-link active text-light"
+                aria-current="page"
+                href="/src/nosotros.html"
+                >Nosotros</a
+              >
+          </li>
+            <li class="nav-item">
               <a class="nav-link text-light" href="src/blog.html">Blog</a>
             </li>
             <li class="nav-item dropdown">
